[gd_scene load_steps=9 format=3 uid="uid://bilupl7oyesr5"]

[ext_resource type="Script" uid="uid://c3cr26mv4kd6m" path="res://SCRIPTS/Option/Volume Script/Volume_Slider.gd" id="1_bui32"]
[ext_resource type="Texture2D" uid="uid://bceoisyg7u0tv" path="res://ASSETS/BUTTONS/Option/closebuttonpressed.png" id="2_26r1l"]
[ext_resource type="Texture2D" uid="uid://bivlq4yxegtba" path="res://ASSETS/BUTTONS/Option/closebutton.png" id="2_bui32"]
[ext_resource type="Texture2D" uid="uid://y6ts4ij42o68" path="res://ASSETS/BUTTONS/Option/closebuttonhover.png" id="2_dgw17"]

[sub_resource type="Theme" id="Theme_26r1l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rlr38"]
texture = ExtResource("2_dgw17")
region_rect = Rect2(1, 1, 14, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cclva"]
texture = ExtResource("2_26r1l")
region_rect = Rect2(1, 1, 14, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dgw17"]
texture = ExtResource("2_bui32")
region_rect = Rect2(1, 1, 14, 14)

[node name="VolumeSliders" type="CanvasLayer"]
script = ExtResource("1_bui32")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -290.0
offset_right = 160.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.601067, 0.33012, 0.0199848, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 27.0
offset_right = 139.0
offset_bottom = 62.0
text = "Master Volume"

[node name="master" type="HSlider" parent="ColorRect/Label"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -5.0
offset_right = 218.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
max_value = 2.0
step = 0.001

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -182.0
offset_right = -4.0
offset_bottom = -159.0
grow_horizontal = 2
grow_vertical = 2
text = "Background Music"

[node name="BGM" type="HSlider" parent="ColorRect/Label2"]
layout_mode = 0
offset_left = 1.0
offset_top = 24.5
offset_right = 281.0
offset_bottom = 40.5
max_value = 2.0
step = 0.001

[node name="Label3" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 187.0
offset_right = 104.0
offset_bottom = 210.0
text = "SFX Volume"

[node name="SFX" type="HSlider" parent="ColorRect/Label3"]
layout_mode = 0
offset_left = 1.0
offset_top = 30.0
offset_right = 281.0
offset_bottom = 46.0
max_value = 2.0
step = 0.001

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_right = 0.01
anchor_bottom = 0.028
offset_left = 774.0
offset_top = 49.0
offset_right = 813.2
offset_bottom = 74.84
theme = SubResource("Theme_26r1l")
theme_override_styles/hover = SubResource("StyleBoxTexture_rlr38")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cclva")
theme_override_styles/normal = SubResource("StyleBoxTexture_dgw17")

[connection signal="value_changed" from="ColorRect/Label/master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="ColorRect/Label2/BGM" to="." method="_on_bgm_value_changed"]
[connection signal="value_changed" from="ColorRect/Label3/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
